<resources>
    <string name="app_name">MDC</string>
    <string name="mdc">Map Data Collector</string>
    <string name="login_title1">Map Data</string>
    <string name="login_title2">COLLECTOR</string>
    <string name="login_user_text_placeholder">Email Address</string>
    <string name="login_pass_text_placeholder">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_dont_have">Don\'t have an account?</string>

    <string name="login_check_email">Check your Email</string>
    <string name="login_check_pass">Check your Password</string>
    <string name="login_forgot_email">Ups!&#8230;Looks like you forgot your email address. Please try again!!</string>
    <string name="login_invalid_email">Ups!&#8230;Looks like you misspelled your email address. Please try again!!</string>
    <string name="login_forgot_pass">Ups!&#8230;Looks like you forgot your password. Its important to know you are YOU!!</string>
    <string name="login_too_short_pass">Ups!&#8230;Are you sure this is your password? Passwords in this app have more than 8 characters. Please try again!</string>
    <string name="slide_1_title">Stay located</string>
    <string name="slide_1_desc">Get full location data of all your jobs. Get and share directions of your jobs from your exact location.</string>
    <string name="slide_2_title">Stay handy</string>
    <string name="slide_2_desc">Get access to all your jobs files and data. Read all of your files right from your phone or tablet.</string>
    <string name="slide_3_title">Stay in touch</string>
    <string name="slide_3_desc">Chat with all your co-workers, share ideas, solutions and be part of the community!!</string>


    <string name="sign_up_sign_up">Already have an account?</string>
    <string name="name">Name</string>
    <string name="re_enter_pass">Re-enter password</string>
    <string name="dialog_title_email">Check your Email</string>
    <string name="dialog_text_email">Ups!&#8230;Looks like you forgot your email address. Please try again!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_name">Check your name</string>
    <string name="dialog_text_name">Ups!&#8230;Looks like we are missing your name. Please try again!</string>
    <string name="dialog_text_misspelled">Ups!&#8230;Looks like you misspelled your email address. Please try again!</string>
    <string name="dialog_title_password_2">Check your Password</string>
    <string name="dialog_text_password_2">Ups!&#8230;Looks like your forgot your password. Please try again!</string>
    <string name="dialog_title_password_1">Check your Password</string>
    <string name="dialog_text_password_1">Ups!&#8230;Are you sure this is your password. Passwords in this app have more than 8 characters. Please try again!</string>
    <string name="dialog_title_re_password">Check your Passwords</string>
    <string name="dialog_text_re_password">Ups!&#8230;The passwords do not match. Please try again!</string>
    <string name="signup_ok_dialog_title">Awesome!!</string>
    <string name="signup_ok_dialog">Your account has been created and it\'s ready to use. Welcome to the MapData Collector family. </string>
    <string name="sign_up_wrong_dialog_title">Ugh! This is embarrassing &#8230;</string>
    <string name="sign_up_wrong_dialog">Something went wrong while creating your account. Please try again later.</string>
    <string name="title_activity_welcome_back">WelcomeBack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_invalid_user_title">Invalid credentials</string>
    <string name="login_invalid_user_message">The email and/or password provided don\'t match with any user in our database. Please, try again. </string>
    <string name="error_getting_user_data">Ugh! This is embarrassing</string>
    <string name="error_getting_user_description">We\'ve had a problem fetching your data from the server. Please try again!</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_jobs_tile_title">Jobs</string>
    <string name="welcome_in_progress">In progress</string>
    <string name="welcome_finished">Finished</string>
    <string name="welcome_started">Started</string>
    <string name="welcome_working">Working</string>
    <string name="title_activity_test_maps">MapTest</string>

    <string name="jobViewerLabel">Job Viewer</string>
    <string name="jobsListLabel">Jobs</string>
</resources>
