<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_root_view_1">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.mdc.activities.LoginActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:animateLayoutChanges="true">

        <TextView
            android:text="@string/login_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_title_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/login_title_1"
            />

        <TextView
            android:text="@string/login_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_title_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title_1"
            style="@style/login_title_2"
            android:textStyle="bold" />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/login_sign_up_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/name"
            android:theme="@style/login_text_input_theme"
            style="@style/login_text_input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_title_2"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/login_sign_up_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/login_user_text_placeholder"
            android:theme="@style/login_text_input_theme"
            style="@style/login_text_input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_sign_up_1"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/login_sign_up_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_sign_up_2"
            android:hint="@string/login_pass_text_placeholder"
            android:theme="@style/login_text_input_theme"
            style="@style/login_text_input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/login_sign_up_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_sign_up_3"
            android:hint="@string/re_enter_pass"
            android:theme="@style/login_text_input_theme"
            style="@style/login_text_input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button"
            android:background="@drawable/login_btn"
            android:textColor="#fff"
            app:layout_constraintRight_toRightOf="@+id/login_sign_up_4"
            app:layout_constraintLeft_toLeftOf="@+id/login_sign_up_4"
            app:layout_constraintTop_toBottomOf="@+id/login_sign_up_4"
            android:layout_marginTop="128dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="48dp"
            android:id="@+id/login_sign_up_lyt"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
            app:layout_constraintRight_toRightOf="@+id/sign_up_button"
            app:layout_constraintLeft_toLeftOf="@+id/sign_up_button"
            android:layout_width="wrap_content"
            >
        <TextView
            android:text="@string/sign_up_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="#9e9e9e"
            android:layout_marginRight="8dp"/>
            <TextView
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:layout_editor_absoluteY="583dp"
                tools:layout_editor_absoluteX="200dp"
                android:shadowColor="#00bfa5"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/login_loader_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222"
        android:alpha="0.8"
        android:visibility="invisible"/>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_loader"
        android:layout_gravity="center"
        android:visibility="invisible"/>
</FrameLayout>

