<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false" />

    <android.support.constraint.ConstraintLayout

        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.mdc.activities.LoginActivity">

        <TextView
            android:text="@string/login_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_title_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/login_title_1"/>

        <TextView
            android:text="@string/login_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_title_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title_1"
            style="@style/login_title_2"
            android:textStyle="bold"/>

        <ImageView
            app:srcCompat="@drawable/ict_logo"
            android:id="@+id/login_logo"
            app:layout_constraintRight_toRightOf="@+id/login_title_2"
            app:layout_constraintLeft_toLeftOf="@+id/login_title_2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title_2"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text=""
            android:ems="10"
            android:id="@+id/login_user_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            android:hint="@string/login_user_text_placeholder"
            android:textColor="#fff"
            android:textColorHint="#d1d1d1"
            android:gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>

