<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.mdc.activities.WelcomeBack"
    tools:showIn="@layout/app_bar_welcome_back">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background"
        android:id="@+id/welcome_bkgr"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:background="@drawable/home_tile_rounded"
                android:id="@+id/welcome_jobs_tile"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/welcome_jobs_tile_header"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">
                    <TextView
                        android:text="@string/welcome_jobs_tile_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/welcome_jobs_tile_title"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:textColor="#fff"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:id="@+id/rings_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp">

                        <!--<TextView-->
                            <!--android:text="71"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:id="@+id/textView"-->
                            <!--android:layout_marginLeft="60dp"-->
                            <!--android:layout_marginStart="60dp"-->
                            <!--android:layout_marginTop="48dp"-->
                            <!--android:layout_alignParentTop="true"-->
                            <!--android:layout_alignParentLeft="true"-->
                            <!--android:layout_alignParentStart="true" />-->
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/jobs_leyend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp">
                        <LinearLayout
                            android:id="@+id/jobs_in_progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="8dp">
                            <View
                                style="@style/welcome_jobs_tile_leyend_square"
                                android:background="@drawable/blue_rect"
                                android:layout_width="@dimen/jobs_leyend_square"
                                android:layout_height="@dimen/jobs_leyend_square"/>
                            <TextView
                                android:text="@string/welcome_in_progress"
                                android:id="@+id/welcome_in_progress_leyend"
                                style="@style/welcome_jobs_tile_leyend"/>
                            <TextView
                                android:id="@+id/jobs_tile_progress_counter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/welcome_jobs_tile_leyend_counter"
                                android:text="()"/>

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/jobs_finished"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="8dp">
                            <View
                                style="@style/welcome_jobs_tile_leyend_square"
                                android:background="@drawable/green_rect"
                                android:layout_width="@dimen/jobs_leyend_square"
                                android:layout_height="@dimen/jobs_leyend_square"/>
                            <TextView
                                android:text="@string/welcome_finished"
                                android:id="@+id/welcome_finished_leyend"
                                style="@style/welcome_jobs_tile_leyend"/>
                            <TextView
                                android:id="@+id/jobs_tile_finished_counter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/welcome_jobs_tile_leyend_counter"
                                android:text="()"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/jobs_started"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="8dp">
                            <View
                                style="@style/welcome_jobs_tile_leyend_square"
                                android:background="@drawable/red_rect"
                                android:layout_width="@dimen/jobs_leyend_square"
                                android:layout_height="@dimen/jobs_leyend_square"/>
                            <TextView
                                android:text="@string/welcome_started"
                                android:id="@+id/welcome_started_leyend"
                                style="@style/welcome_jobs_tile_leyend"/>
                            <TextView
                                android:id="@+id/jobs_tile_started_counter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/welcome_jobs_tile_leyend_counter"
                                android:text="()"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/jobs_working"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="8dp">
                            <View
                                style="@style/welcome_jobs_tile_leyend_square"
                                android:background="@drawable/purp_rect"
                                android:layout_width="@dimen/jobs_leyend_square"
                                android:layout_height="@dimen/jobs_leyend_square"/>
                            <TextView
                                android:text="@string/welcome_working"
                                android:id="@+id/welcome_working_leyend"
                                style="@style/welcome_jobs_tile_leyend"/>
                            <TextView
                                android:id="@+id/jobs_tile_working_counter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/welcome_jobs_tile_leyend_counter"
                                android:text="()"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/welcome_loader_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222"
        android:alpha="0.8"
        android:visibility="visible"/>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/welcome_progress"
        android:visibility="visible"/>


</FrameLayout>

